# arcade-rs

./: Cargo.toml  LICENSE
src/: config.rs  context.rs  macros.rs  main.rs  view.rs
src/assets/: mod.rs  sprite.rs
src/game/: mod.rs  pattern.rs  primitives.rs  ship.rs
src/state/: input.rs  mod.rs  time.rs
